Tossing in some AOL love

--- a/src/main/webapp/css/impress.css
+++ b/src/main/webapp/css/impress.css
@@ -432,6 +432,10 @@ a:focus {
     margin-bottom: 120px;
 }
 
+.aol-platforms {
+  width: 50%;
+}
+
 #wikipedia h1 {
     font-size: 60px;
     float: right;
